# MSCS_refactoring

./: .gitignore  CMakeLists.txt  README.md
include/: database_connector.h  export_config.h  mainwindow.h  module_handler.h  specification_manager.h  specifier_config.h  types.h  xml_parser.h
resources/: resources.qrc
src/: TODO.md  database_connector.cpp  export_config.cpp  main.cpp  mainwindow.cpp  module_handler.cpp  specification_manager.cpp  specifier_config.cpp  xml_parser.cpp
ui/: mainwindow.ui
